--- a/Proyectos/proyects/mi-app/src/App.css
+++ b/Proyectos/proyects/mi-app/src/App.css
@@ -42,7 +42,7 @@ h1 {
   padding-right: 2vw;
 }
 .section-p {
-  font-size: 1.6em;
+  font-size: 2vw;
   flex: 1;
 }
 .name {
@@ -56,7 +56,7 @@ h1 {
 
 .section-p-descrip {
   text-align: start;
-  font-size: 1.3em;
+  font-size: 1.5vw;
   flex: 2;
 }
 
